# krfb

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  CMakeLists.txt  ChangeLog  DCOP-INTERFACE  INSTALL  MODES_SECURITY  Mainpage.dox  Makefile.am  Messages.sh  NOTES  README  README_KDE3  README_KDE_3.0  ROADMAP  TODO  abstractconnectioncontroller.cpp  abstractconnectioncontroller.h  abstractrfbserver.cpp  abstractrfbserver.h  config-krfb.h.cmake  configsecurity.ui  configtcp.ui  configuration.h  configure.in.in  connectioncontroller.cpp  connectioncontroller.h  connectiondialog.cpp  connectiondialog.h  connectionwidget.ui  events.cpp  events.h  framebuffer.cpp  framebuffer.h  framebuffermanager.cpp  (+40 more)
client/: Makefile.am  TODO  colour.c  krdc.cpp  krdc.h  kvncview.cpp  kvncview.h  main.cpp  rfbproto.c  threads.cpp  threads.h  tight.c  vncviewer.h
cmake/modules/: FindKTp.cmake  FindLibVNCServer.cmake  FindPipeWire.cmake
doc/: CMakeLists.txt  configuration_access.eps  configuration_network.eps  configuration_session.eps  connection.eps  email_invitation.eps  index.docbook  invitation_management.eps  personal_invitation.eps  screenshot.eps
events/: CMakeLists.txt
events/fakeinput/: CMakeLists.txt  fakeinputevents.cpp  fakeinputevents.h  fakeinputeventsplugin.cpp  fakeinputeventsplugin.h  krfb_events_fakeinput.desktop  krfb_events_fakeinput.json
events/x11/: CMakeLists.txt  krfb_events_x11.desktop  krfb_events_x11.json  x11events.cpp  x11events.h  x11eventsplugin.cpp  x11eventsplugin.h
events/xdp/: CMakeLists.txt  krfb_events_xdp.desktop  krfb_events_xdp.json  xdpevents.cpp  xdpevents.h  xdpeventsplugin.cpp  xdpeventsplugin.h
framebuffers/: CMakeLists.txt
framebuffers/gbm/: CMakeLists.txt  gbmframebuffer.cpp  gbmframebuffer.h  gbmframebufferplugin.cpp  gbmframebufferplugin.h  krfb_framebuffer_gbm.json  logging.cpp  logging.h
framebuffers/pipewire/: CMakeLists.txt  krfb_framebuffer_pw.json  pipewire.json  pw_framebuffer.cpp  pw_framebuffer.h  pw_framebufferplugin.cpp  pw_framebufferplugin.h  screencasting.cpp  screencasting.h  xdp_dbus_interface.xml
framebuffers/qt/: CMakeLists.txt  krfb_framebuffer_qt.desktop  krfb_framebuffer_qt.json  qtframebuffer.cpp  qtframebuffer.h  qtframebufferplugin.cpp  qtframebufferplugin.h
framebuffers/x11/: CMakeLists.txt  krfb_framebuffer_x11.desktop  krfb_framebuffer_x11.json  x11framebuffer.cpp  x11framebuffer.h  x11framebufferplugin.cpp  x11framebufferplugin.h
framebuffers/xcb/: CMakeLists.txt  krfb_framebuffer_xcb.desktop  krfb_framebuffer_xcb.json  xcb.json  xcb_framebuffer.cpp  xcb_framebuffer.h  xcb_framebufferplugin.cpp  xcb_framebufferplugin.h
icons/: CMakeLists.txt  sc-apps-krfb.svgz
kcm_krfb/: CMakeLists.txt  Makefile.am  Messages.sh  configurationwidget.ui  kcm_krfb.cpp  kcm_krfb.h  kcmkrfb.desktop
kinetd/: CMakeLists.txt  Makefile.am  Messages.sh  README.debugging  eventsrc  kinetd.cpp  kinetd.desktop  kinetd.h  kinetd.notifyrc  kinetdmodule.desktop  portlistener.h
krfb/: CMakeLists.txt  Makefile.am  Messages.sh  XUpdateScanner.cc  XUpdateScanner.h  abstractconnectioncontroller.cpp  abstractconnectioncontroller.h  abstractrfbserver.cpp  abstractrfbserver.h  config-krfb.h.cmake  configuration.cc  configuration.cpp  configuration.h  configuration_hostname.cpp  configurationdialog.cc  configurationdialog.h  configurationdialog.ui  connectiondialog.cc  connectiondialog.cpp  connectiondialog.h  connectionwidget.ui  events.cpp  events.h  eventsmanager.cpp  eventsmanager.h  eventsplugin.cpp  eventsplugin.h  eventsrc  framebuffer.cpp  framebuffer.h  framebuffermanager.cpp  framebuffermanager.h  framebufferplugin.cpp  framebufferplugin.h  invitation.cc  invitation.cpp  invitation.h  invitationmanager.cpp  invitationmanager.h  invitationsrfbclient.cpp  (+95 more)
krfb/ui/: configframebuffer.ui  configsecurity.ui  configtcp.ui  invitewidget.ui  mainwidget.ui  personalinvitewidget.ui  tubesconnectionwidget.ui
krfb_httpd/: CMakeLists.txt  Makefile.am  kinetd_krfb_httpd.desktop  krfb_httpd
libvncserver/: CMakeLists.txt  Makefile.am  TODO.krfb  cargs.c  corre.c  cursor.c  font.c  hextile.c  httpd.c  libvncserver-config.h.cmake  main.c  rfb.h  rfbproto.h  rfbserver.c  rre.c  scale.c  selbox.c  sockets.c  sraRegion.c  sraRegion.h  stats.c  tight.c  translate.c  ultra.c  vncauth.c  zlib.c
libvncserver/rfb/: rfb.h  rfbclient.h  rfbproto.h
po/af/: krfb.po
po/ar/: krfb.po
po/ast/: krfb.po
po/be/: krfb.po
po/bg/: krfb.po
po/br/: krfb.po
po/bs/: krfb.po
po/ca/: krfb.po
po/ca@valencia/: krfb.po
po/cs/: krfb.po
po/cy/: krfb.po
po/da/: krfb.po
po/de/: krfb.po
po/el/: krfb.po
po/en_GB/: krfb.po
po/eo/: krfb.po
po/es/: krfb.po
po/et/: krfb.po
po/eu/: krfb.po
po/fa/: krfb.po
po/fi/: krfb.po
po/fr/: krfb.po
po/ga/: krfb.po
po/gl/: krfb.po
po/he/: krfb.po
po/hi/: krfb.po
po/hne/: krfb.po
po/hr/: krfb.po
po/hsb/: krfb.po
po/hu/: krfb.po
po/ia/: krfb.po
po/id/: krfb.po
po/is/: krfb.po
po/it/: krfb.po
po/ja/: krfb.po
po/ka/: krfb.po
po/kk/: krfb.po
po/km/: krfb.po
po/ko/: krfb.po
po/lt/: krfb.po
po/lv/: krfb.po
po/mai/: krfb.po
po/mk/: krfb.po
po/ml/: krfb.po
po/mr/: krfb.po
po/ms/: krfb.po
po/nb/: krfb.po
po/nds/: krfb.po
po/ne/: krfb.po
po/nl/: krfb.po
po/nn/: krfb.po
po/oc/: krfb.po
po/pa/: krfb.po
po/pl/: krfb.po
po/pt/: krfb.po
po/pt_BR/: krfb.po
po/ro/: krfb.po
po/ru/: krfb.po
po/sa/: krfb.po
po/se/: krfb.po
po/sk/: krfb.po
po/sl/: krfb.po
po/sq/: krfb.po
po/sr/: krfb.po
po/sr@ijekavian/: krfb.po
po/sr@ijekavianlatin/: krfb.po
po/sr@latin/: krfb.po
po/sv/: krfb.po
po/ta/: krfb.po
po/tg/: krfb.po
po/th/: krfb.po
po/tr/: krfb.po
po/ug/: krfb.po
po/uk/: krfb.po
srvloc/: CMakeLists.txt  Makefile.am  getifaddrs.cpp  getifaddrs.h  kinetaddr.cpp  kinetaddr.h  kinetaddr_ipfinder.cpp  kinetinterface.cpp  kinetinterface.h  kinetinterfacewatcher.cpp  kinetinterfacewatcher.h  kserviceregistry.cpp  kserviceregistry.h  kuser.cpp  kuser.h  uuid.cpp  uuid.h
(+21 files in other folders)
